--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <div class="hello">
-    <h1> hi i am heading</h1>
-  </div>
+    <h1>Who told you can't Play Piano?</h1>
+ <div class="piano-container">
+
+    
+ </div>
 
 
 
